deployment.yaml
# kubectl create secret docker-registry ghcr-auth-token --docker-server=ghcr.io --docker-username=bognarpal --docker-password=<TOKEN>


apiVersion: apps/v1
kind: Deployment
metadata:
  name: allatok-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allatok-frontend
  template:
    metadata:
      labels:
        app: allatok-frontend
    spec:
      containers:
        - name: allatok-frontend-container
          image: ghcr.io/luo-hong-jun/allatok-frontend:1776936300
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-beadando-auth-token


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: allatok-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allatok-backend
  template:
    metadata:
      labels:
        app: allatok-backend
    spec:
      containers:
        - name: allatok-backend-container
          image: ghcr.io/luo-hong-jun/allatok-backend:1776936300
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-beadando-auth-token

---

apiVersion: v1
kind: Service
metadata:
  name: allatok-backend-cluster-ip-service
spec:
  selector:
    app: allatok-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: allatok-frontend-cluster-ip-service
spec:
  selector:
    app: allatok-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allatok-frontend-ingress
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16, 193.225.219.0/24
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' 

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - allatok-frontend-luo-hong-jun.jcloud.jedlik.cloud
        - allatok-backend-luo-hong-jun.jcloud.jedlik.cloud
      secretName: allatok-certificate

  rules:
    - host: allatok-frontend-luo-hong-jun.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allatok-frontend-cluster-ip-service
                port:
                  number: 80
    - host: allatok-backend-luo-hong-jun.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allatok-backend-cluster-ip-service
                port:
                  number: 3000
