k8s-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-backend
  labels:
    app: calculator-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-backend
  template:
    metadata:
      labels:
        app: calculator-backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: calculator-backend
          image: ghcr.io/veryoriginalik/calculator-backend:daf1117
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-backend
spec:
  type: ClusterIP
  selector:
    app: calculator-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16, 193.225.219.0/24
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'   
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calculator-backend.jcloud.jedlik.cloud
      secretName: calculator-certificate
  rules:
    - host: calculator.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-0224-cluster-ip-service
                port:
                  number: 80
    - host: calculator-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-0224-cluster-ip-service
                port:
                  number: 80
