k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-frontend
  labels:
    app: calculator-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-frontend
  template:
    metadata:
      labels:
        app: calculator-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: calculator-frontend
          image: ghcr.io/veryoriginalik/calculator-frontend:593be40
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-frontend
spec:
  type: ClusterIP
  selector:
    app: calculator-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
# Ingress resource to expose frontend at calculator.jcloud.jedlik.cloud
---
# Ingress resource to expose frontend and backend at custom domains
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calculator.jcloud.jedlik.cloud
        - calculator-backend.jcloud.jedlik.cloud
      secretName: calculator-certificate
  rules:
    - host: calculator.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-frontend
                port:
                  number: 80
    - host: calculator-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /api/calculate
            pathType: Prefix
            backend:
              service:
                name: calculator-backend
                port:
                  number: 5001
